Move import ledger and invoice to menu item